src/main/java/com/example/todo/common/exception/error/NotFoundTaskException.java
package com.example.todo.common.exception.error;

import com.example.todo.common.exception.ErrorCode;

public class NotFoundTaskException extends RuntimeException{

    public NotFoundTaskException() { super(ErrorCode.NOT_FOUND_TASK.getMessage());}
}
